Suppression fichiers inutiles

--- a/retrieve_data_pyspark.ipynb
+++ b/retrieve_data_pyspark.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:52.131796600Z",
-     "start_time": "2025-12-19T15:13:51.917083700Z"
+     "end_time": "2025-12-20T10:34:19.263830400Z",
+     "start_time": "2025-12-20T10:34:19.078416Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "import requests\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:56.082450200Z",
-     "start_time": "2025-12-19T15:13:52.132795500Z"
+     "end_time": "2025-12-20T10:34:40.917152100Z",
+     "start_time": "2025-12-20T10:34:19.266295900Z"
     }
    },
    "cell_type": "code",
@@ -32,13 +32,13 @@
     "    .getOrCreate()\n",
     "\n",
     "MONTH = '04'\n",
-    "YEAR = '2023'\n",
-    "START_DATE = f'{YEAR}-01-01'\n",
-    "END_DATE = f'{YEAR}-12-31'"
+    "YEAR = '2022'\n",
+    "START_DATE = f'{YEAR}-{MONTH}-01'\n",
+    "END_DATE = f'{YEAR}-{MONTH}-30'"
    ],
    "id": "783468df00c025e6",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -49,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:58.138332100Z",
-     "start_time": "2025-12-19T15:13:56.137710Z"
+     "end_time": "2025-12-20T10:34:42.979569700Z",
+     "start_time": "2025-12-20T10:34:40.962271700Z"
     }
    },
    "cell_type": "code",
@@ -63,13 +63,13 @@
    ],
    "id": "e607fe0d98606298",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:58.158425800Z",
-     "start_time": "2025-12-19T15:13:58.149808300Z"
+     "end_time": "2025-12-20T10:34:43.002281200Z",
+     "start_time": "2025-12-20T10:34:42.992397700Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +106,7 @@
    ],
    "id": "93c37c3321137143",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -123,8 +123,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:58.166462500Z",
-     "start_time": "2025-12-19T15:13:58.159425400Z"
+     "end_time": "2025-12-20T10:34:43.021527200Z",
+     "start_time": "2025-12-20T10:34:43.012768300Z"
     }
    },
    "cell_type": "code",
@@ -141,7 +141,7 @@
    ],
    "id": "a0ae33d43e769f15",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:58.175419700Z",
-     "start_time": "2025-12-19T15:13:58.167722200Z"
+     "end_time": "2025-12-20T10:34:43.029488100Z",
+     "start_time": "2025-12-20T10:34:43.022921500Z"
     }
    },
    "cell_type": "code",
@@ -169,7 +169,7 @@
    ],
    "id": "309b4e4580a06b48",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -180,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:13:58.184000300Z",
-     "start_time": "2025-12-19T15:13:58.175419700Z"
+     "end_time": "2025-12-20T10:34:43.037297900Z",
+     "start_time": "2025-12-20T10:34:43.030496100Z"
     }
    },
    "cell_type": "code",
@@ -199,7 +199,7 @@
    ],
    "id": "a25fd3f8ef3176d7",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -210,8 +210,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:14:57.595391200Z",
-     "start_time": "2025-12-19T15:13:58.217233300Z"
+     "end_time": "2025-12-20T10:35:12.731163400Z",
+     "start_time": "2025-12-20T10:34:43.038392500Z"
     }
    },
    "cell_type": "code",
@@ -231,26 +231,26 @@
       "+-------------------+-----------+\n",
       "|     horodate_heure|total_count|\n",
       "+-------------------+-----------+\n",
-      "|2023-01-01 00:00:00|       1888|\n",
-      "|2023-01-01 01:00:00|       2283|\n",
-      "|2023-01-01 02:00:00|       2408|\n",
-      "|2023-01-01 03:00:00|       2694|\n",
-      "|2023-01-01 04:00:00|       1998|\n",
-      "|2023-01-01 05:00:00|       1501|\n",
-      "|2023-01-01 06:00:00|       1041|\n",
-      "|2023-01-01 07:00:00|        744|\n",
-      "|2023-01-01 08:00:00|       1052|\n",
-      "|2023-01-01 09:00:00|       1524|\n",
-      "|2023-01-01 10:00:00|       2652|\n",
-      "|2023-01-01 11:00:00|       4311|\n",
-      "|2023-01-01 12:00:00|       5022|\n",
-      "|2023-01-01 13:00:00|       4816|\n",
-      "|2023-01-01 14:00:00|       6020|\n",
-      "|2023-01-01 15:00:00|       7214|\n",
-      "|2023-01-01 16:00:00|       6399|\n",
-      "|2023-01-01 17:00:00|       5123|\n",
-      "|2023-01-01 18:00:00|       4599|\n",
-      "|2023-01-01 19:00:00|       4552|\n",
+      "|2022-03-31 23:00:00|       3607|\n",
+      "|2022-04-01 00:00:00|       1762|\n",
+      "|2022-04-01 01:00:00|       1207|\n",
+      "|2022-04-01 02:00:00|        878|\n",
+      "|2022-04-01 03:00:00|        652|\n",
+      "|2022-04-01 04:00:00|        885|\n",
+      "|2022-04-01 05:00:00|       2315|\n",
+      "|2022-04-01 06:00:00|       9696|\n",
+      "|2022-04-01 07:00:00|      21176|\n",
+      "|2022-04-01 08:00:00|      11340|\n",
+      "|2022-04-01 09:00:00|       6401|\n",
+      "|2022-04-01 10:00:00|       7415|\n",
+      "|2022-04-01 11:00:00|      11734|\n",
+      "|2022-04-01 12:00:00|      10602|\n",
+      "|2022-04-01 13:00:00|       8518|\n",
+      "|2022-04-01 14:00:00|       8810|\n",
+      "|2022-04-01 15:00:00|      13040|\n",
+      "|2022-04-01 16:00:00|      20039|\n",
+      "|2022-04-01 17:00:00|      18692|\n",
+      "|2022-04-01 18:00:00|      14181|\n",
       "+-------------------+-----------+\n",
       "only showing top 20 rows\n"
      ]
@@ -261,8 +261,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:15:22.233383Z",
-     "start_time": "2025-12-19T15:14:57.651056700Z"
+     "end_time": "2025-12-20T10:35:29.905699400Z",
+     "start_time": "2025-12-20T10:35:12.793017700Z"
     }
    },
    "cell_type": "code",
@@ -282,26 +282,26 @@
       "+-------------------+-----------------+\n",
       "|     horodate_heure|avg_temp_per_hour|\n",
       "+-------------------+-----------------+\n",
-      "|2023-01-01 00:00:00|            15.14|\n",
-      "|2023-01-01 01:00:00|            14.91|\n",
-      "|2023-01-01 02:00:00|            14.72|\n",
-      "|2023-01-01 03:00:00|            14.88|\n",
-      "|2023-01-01 04:00:00|            14.89|\n",
-      "|2023-01-01 05:00:00|            14.78|\n",
-      "|2023-01-01 06:00:00|            14.59|\n",
-      "|2023-01-01 07:00:00|            14.43|\n",
-      "|2023-01-01 08:00:00|             14.4|\n",
-      "|2023-01-01 09:00:00|            14.83|\n",
-      "|2023-01-01 10:00:00|            15.71|\n",
-      "|2023-01-01 11:00:00|            16.58|\n",
-      "|2023-01-01 12:00:00|            16.87|\n",
-      "|2023-01-01 13:00:00|            17.04|\n",
-      "|2023-01-01 14:00:00|            16.85|\n",
-      "|2023-01-01 15:00:00|            16.34|\n",
-      "|2023-01-01 16:00:00|            16.01|\n",
-      "|2023-01-01 17:00:00|            15.67|\n",
-      "|2023-01-01 18:00:00|            15.63|\n",
-      "|2023-01-01 19:00:00|            15.46|\n",
+      "|2022-03-31 23:00:00|              7.4|\n",
+      "|2022-04-01 00:00:00|             6.96|\n",
+      "|2022-04-01 01:00:00|             6.49|\n",
+      "|2022-04-01 02:00:00|             4.51|\n",
+      "|2022-04-01 03:00:00|              2.7|\n",
+      "|2022-04-01 04:00:00|             2.11|\n",
+      "|2022-04-01 05:00:00|             1.55|\n",
+      "|2022-04-01 06:00:00|             1.37|\n",
+      "|2022-04-01 07:00:00|             1.51|\n",
+      "|2022-04-01 08:00:00|             1.86|\n",
+      "|2022-04-01 09:00:00|             2.14|\n",
+      "|2022-04-01 10:00:00|             2.29|\n",
+      "|2022-04-01 11:00:00|             2.44|\n",
+      "|2022-04-01 12:00:00|             2.47|\n",
+      "|2022-04-01 13:00:00|              2.5|\n",
+      "|2022-04-01 14:00:00|             2.54|\n",
+      "|2022-04-01 15:00:00|             3.38|\n",
+      "|2022-04-01 16:00:00|             3.88|\n",
+      "|2022-04-01 17:00:00|             4.07|\n",
+      "|2022-04-01 18:00:00|             3.88|\n",
       "+-------------------+-----------------+\n",
       "only showing top 20 rows\n"
      ]
@@ -312,8 +312,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:15:42.603211400Z",
-     "start_time": "2025-12-19T15:15:22.290209800Z"
+     "end_time": "2025-12-20T10:35:46.028718Z",
+     "start_time": "2025-12-20T10:35:29.968808100Z"
     }
    },
    "cell_type": "code",
@@ -334,26 +334,26 @@
       "+-------------------+------------------+\n",
       "|     horodate_heure|avg_pluie_per_hour|\n",
       "+-------------------+------------------+\n",
-      "|2023-01-01 08:00:00|               0.3|\n",
-      "|2023-01-01 09:00:00|               0.1|\n",
-      "|2023-01-01 14:00:00|               0.1|\n",
-      "|2023-01-01 19:00:00|               0.1|\n",
-      "|2023-01-02 04:00:00|               0.1|\n",
-      "|2023-01-02 05:00:00|               0.1|\n",
-      "|2023-01-02 13:00:00|              0.17|\n",
-      "|2023-01-02 14:00:00|               0.5|\n",
-      "|2023-01-02 15:00:00|               0.2|\n",
-      "|2023-01-02 16:00:00|              0.15|\n",
-      "|2023-01-02 17:00:00|              0.88|\n",
-      "|2023-01-02 18:00:00|              2.02|\n",
-      "|2023-01-02 19:00:00|              1.89|\n",
-      "|2023-01-02 20:00:00|              1.09|\n",
-      "|2023-01-02 21:00:00|              0.51|\n",
-      "|2023-01-02 22:00:00|               0.2|\n",
-      "|2023-01-02 23:00:00|              0.87|\n",
-      "|2023-01-03 00:00:00|               0.6|\n",
-      "|2023-01-03 01:00:00|              0.23|\n",
-      "|2023-01-03 02:00:00|              0.27|\n",
+      "|2022-03-31 23:00:00|               0.1|\n",
+      "|2022-04-01 01:00:00|               0.2|\n",
+      "|2022-04-01 02:00:00|              0.75|\n",
+      "|2022-04-01 03:00:00|              1.18|\n",
+      "|2022-04-01 04:00:00|               1.3|\n",
+      "|2022-04-01 05:00:00|              1.53|\n",
+      "|2022-04-01 06:00:00|              1.07|\n",
+      "|2022-04-01 07:00:00|               0.6|\n",
+      "|2022-04-01 08:00:00|              0.32|\n",
+      "|2022-04-01 09:00:00|              1.04|\n",
+      "|2022-04-01 10:00:00|              0.93|\n",
+      "|2022-04-01 11:00:00|              0.53|\n",
+      "|2022-04-01 12:00:00|               0.4|\n",
+      "|2022-04-01 13:00:00|               0.2|\n",
+      "|2022-04-01 14:00:00|              0.45|\n",
+      "|2022-04-01 15:00:00|              1.95|\n",
+      "|2022-04-01 18:00:00|              0.32|\n",
+      "|2022-04-01 19:00:00|               0.3|\n",
+      "|2022-04-01 20:00:00|              0.95|\n",
+      "|2022-04-01 21:00:00|              1.09|\n",
       "+-------------------+------------------+\n",
       "only showing top 20 rows\n"
      ]
@@ -364,8 +364,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:16:31.421038200Z",
-     "start_time": "2025-12-19T15:15:42.632374900Z"
+     "end_time": "2025-12-20T10:36:29.921320800Z",
+     "start_time": "2025-12-20T10:35:46.059687600Z"
     }
    },
    "cell_type": "code",
@@ -375,7 +375,7 @@
     "                                  .withColumnRenamed(\"horodate_heure\", \"datetime\") \\\n",
     "                                  .orderBy(\"datetime\")\n",
     "final_data = final_data.fillna(0)\n",
-    "final_data.show(20)"
+    "final_data.show()"
    ],
    "id": "7781669ef042c4da",
    "outputs": [
@@ -386,26 +386,26 @@
       "+-------------------+-----------+-----------------+------------------+\n",
       "|           datetime|total_count|avg_temp_per_hour|avg_pluie_per_hour|\n",
       "+-------------------+-----------+-----------------+------------------+\n",
-      "|2023-01-01 00:00:00|       1888|            15.14|               0.0|\n",
-      "|2023-01-01 01:00:00|       2283|            14.91|               0.0|\n",
-      "|2023-01-01 02:00:00|       2408|            14.72|               0.0|\n",
-      "|2023-01-01 03:00:00|       2694|            14.88|               0.0|\n",
-      "|2023-01-01 04:00:00|       1998|            14.89|               0.0|\n",
-      "|2023-01-01 05:00:00|       1501|            14.78|               0.0|\n",
-      "|2023-01-01 06:00:00|       1041|            14.59|               0.0|\n",
-      "|2023-01-01 07:00:00|        744|            14.43|               0.0|\n",
-      "|2023-01-01 08:00:00|       1052|             14.4|               0.3|\n",
-      "|2023-01-01 09:00:00|       1524|            14.83|               0.1|\n",
-      "|2023-01-01 10:00:00|       2652|            15.71|               0.0|\n",
-      "|2023-01-01 11:00:00|       4311|            16.58|               0.0|\n",
-      "|2023-01-01 12:00:00|       5022|            16.87|               0.0|\n",
-      "|2023-01-01 13:00:00|       4816|            17.04|               0.0|\n",
-      "|2023-01-01 14:00:00|       6020|            16.85|               0.1|\n",
-      "|2023-01-01 15:00:00|       7214|            16.34|               0.0|\n",
-      "|2023-01-01 16:00:00|       6399|            16.01|               0.0|\n",
-      "|2023-01-01 17:00:00|       5123|            15.67|               0.0|\n",
-      "|2023-01-01 18:00:00|       4599|            15.63|               0.0|\n",
-      "|2023-01-01 19:00:00|       4552|            15.46|               0.1|\n",
+      "|2022-03-31 23:00:00|       3607|              7.4|               0.1|\n",
+      "|2022-04-01 00:00:00|       1762|             6.96|               0.0|\n",
+      "|2022-04-01 01:00:00|       1207|             6.49|               0.2|\n",
+      "|2022-04-01 02:00:00|        878|             4.51|              0.75|\n",
+      "|2022-04-01 03:00:00|        652|              2.7|              1.18|\n",
+      "|2022-04-01 04:00:00|        885|             2.11|               1.3|\n",
+      "|2022-04-01 05:00:00|       2315|             1.55|              1.53|\n",
+      "|2022-04-01 06:00:00|       9696|             1.37|              1.07|\n",
+      "|2022-04-01 07:00:00|      21176|             1.51|               0.6|\n",
+      "|2022-04-01 08:00:00|      11340|             1.86|              0.32|\n",
+      "|2022-04-01 09:00:00|       6401|             2.14|              1.04|\n",
+      "|2022-04-01 10:00:00|       7415|             2.29|              0.93|\n",
+      "|2022-04-01 11:00:00|      11734|             2.44|              0.53|\n",
+      "|2022-04-01 12:00:00|      10602|             2.47|               0.4|\n",
+      "|2022-04-01 13:00:00|       8518|              2.5|               0.2|\n",
+      "|2022-04-01 14:00:00|       8810|             2.54|              0.45|\n",
+      "|2022-04-01 15:00:00|      13040|             3.38|              1.95|\n",
+      "|2022-04-01 16:00:00|      20039|             3.88|               0.0|\n",
+      "|2022-04-01 17:00:00|      18692|             4.07|               0.0|\n",
+      "|2022-04-01 18:00:00|      14181|             3.88|              0.32|\n",
       "+-------------------+-----------+-----------------+------------------+\n",
       "only showing top 20 rows\n"
      ]
@@ -416,8 +416,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T15:19:57.044566200Z",
-     "start_time": "2025-12-19T15:18:48.973680100Z"
+     "end_time": "2025-12-20T10:42:07.158403400Z",
+     "start_time": "2025-12-20T10:41:15.993098400Z"
     }
    },
    "cell_type": "code",
@@ -426,11 +426,11 @@
     "    .mode(\"overwrite\") \\\n",
     "    .option(\"header\", \"true\") \\\n",
     "    .option(\"sep\", \";\") \\\n",
-    "    .csv(f\"./CSVs/spark/counting_data{YEAR}\")"
+    "    .csv(f\"./CSVs/spark/counting_data_{MONTH}_{YEAR}\")"
    ],
    "id": "a5ffbf3bcdcac4e7",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   }
  ],
  "metadata": {
